--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,32 @@
 {
   "cli": {
-    "version": ">= 10.1.1"
+    "version": ">= 8.0.0"
   },
+
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "APP_VARIANT": "development"
+      }
     },
     "ios-simulator": {
-      "extends": "development",
       "ios": {
         "simulator": true
       }
     },
+
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "APP_VARIANT": "preview"
+      }
     },
+
     "production": {}
   },
+
   "submit": {
     "production": {}
   }
